--- a/block-BJaait/code/stylesheet.css
+++ b/block-BJaait/code/stylesheet.css
@@ -16,75 +16,124 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
-	display: block;
+    display: block;
 }
 body {
-	line-height: 1;
+    line-height: 1;
 }
 ol, ul {
-	list-style: none;
+    list-style: none;
 }
 blockquote, q {
-	quotes: none;
+    quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
-	content: none;
+    content: '';
+    content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 
 /* My Resets */
 *, *::before, *::after{
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-html {
-    background-color: #2572f4;
+body {
+    background-color: #0072ff;
 }
-
-header {
-    text-transform: uppercase;
+h1{
     text-align: center;
-    padding: 2rem;
-    font-size: 3.5rem;
     color: white;
+    font-size: 50px;
+    font-weight: normal;
 }
-
-.main-div {
-    width: 30%;
-    margin: 0 auto;
+.adder {
+    position: relative;
+    width: 250px;
+    margin: 0px auto;
+    display: block;
 }
-
-input, li {
-    width: 100%;
-    padding: 1rem;
-    background-color: #2572f4;
+.adder::-webkit-input-placeholder {
+    color: #cecece;
+}
+.input {
+    outline: none;
     border: 1px solid white;
-    font-size: 1.5rem;
-    display: flex;
-    justify-content: space-between;
+    background-color: #0072ff;
+    color: white;
+    height: 50px;
+    width: 250px;
+    padding-left: 10px;
+    font-weight: 800;
+    font-size: 16px;
+    margin-left: -5px;
 }
-
-input ::placeholder {
-    color: black;
+span {
+    position: absolute;
+    right: 0;
+    top: 0;
+    font-size: 30px;
+    font-weight: 800;
+    line-height: 1.8;
+    cursor: pointer;
+    transition: all 200ms;
+    color: white;
+    will-change: transform;
 }
-li{
+span:hover{
+    transform: rotate(180deg);
+}
+ul {
+    padding: 0px;
+}
+.draggable {
+    will-change: transform;
+    font-weight: 800;
+    height: 50px;
+    list-style-type: none;
+    margin: 10px;
     background-color: white;
-    color: #2572f4;
-    margin-top: 1rem;
+    color: #0072ff;
+    width: 250px;
+    line-height: 3.2;
+    padding-left: 10px;
+    cursor: move;
+    transition: all 200ms;
+    user-select: none;
+    margin: 10px auto;
+    position: relative;
+}
+.draggable::after {
+    content: 'drag me';
+    right: 7px;
+    font-size: 10px;
+    position: absolute;
+    cursor: pointer;
+    line-height: 5;
+    transition: all 200ms;
+    transition-timing-function: cubic-bezier(0.48, 0.72, 0.62, 1.50);
+    transform: translateX(120%);
+    opacity: 0;
+}
+.draggable:hover::after {
+    opacity: 1;
+    transform: translate(0);
+}
+.over {
+    transform: scale(1.1, 1.1);
 }
